--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,9 @@ button.cancel=Cancel
 
 examination.panel.header.animal=Animal data
 examination.panel.header.patient=Patient data
+examination.tab.label.examination=Examination
+examination.tab.label.pictures=Pictures
+examination.tab.label.invoice=Invoice
 
 index.placeholder.search=Search...
 
