--- a/src/main/resources/messages_hu.properties
+++ b/src/main/resources/messages_hu.properties
@@ -5,6 +5,9 @@ button.cancel=Mégsem
 
 examination.panel.header.animal=Állat adatai
 examination.panel.header.patient=Páciens adatai
+examination.tab.label.examination=Vizsgálat
+examination.tab.label.pictures=Képek
+examination.tab.label.invoice=Számla
 
 index.placeholder.search=Keresés...
 
