add addExamination function and config database

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,6 +23,10 @@ examination.label.date=Examination date
 examination.label.patient_name=Patient name
 examination.label.animal_name=Animal name
 examination.label.brutto_price=Brutto price
+examination.label.symptom=Symptom
+examination.label.comment=Comment
+examination.label.examination=Examination
+examination.select.patient.select_one_patient=Select one patient
 
 index.placeholder.search=Search...
 
