--- a/src/main/resources/messages_hu.properties
+++ b/src/main/resources/messages_hu.properties
@@ -23,6 +23,10 @@ examination.label.date=Kezelés dátuma
 examination.label.patient_name=Páciens neve
 examination.label.animal_name=Állat neve
 examination.label.brutto_price=Bruttó ár
+examination.label.symptom=Tünet
+examination.label.comment=Megjegyzés
+examination.label.examination=Vizsgálat
+examination.select.patient.select_one_patient=Páciens kiválasztása
 
 index.placeholder.search=Keresés...
 
