Add the new exemation function

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,7 +26,12 @@ examination.label.brutto_price=Brutto price
 examination.label.symptom=Symptom
 examination.label.comment=Comment
 examination.label.examination=Examination
+examination.label.documents=Documents
 examination.select.patient.select_one_patient=Select one patient
+examination.invoice.group.basic_fee=Basic fee
+examination.invoice.group.examination_and_treatment_fees=Examination and treatment fees
+examination.invoice.group.medicine_and_dressing_materials=Medicine and dressing materials
+examination.invoice.group.reimbursement_of_travel_expenses=Reimbursement of travel expenses
 
 index.placeholder.search=Search...
 
