--- a/src/main/resources/messages_hu.properties
+++ b/src/main/resources/messages_hu.properties
@@ -26,7 +26,12 @@ examination.label.brutto_price=Bruttó ár
 examination.label.symptom=Tünet
 examination.label.comment=Megjegyzés
 examination.label.examination=Vizsgálat
+examination.label.documents=Dokumentumok
 examination.select.patient.select_one_patient=Páciens kiválasztása
+examination.invoice.group.basic_fee=Alapdíj
+examination.invoice.group.examination_and_treatment_fees=Vizsgálat és kezelés díjak
+examination.invoice.group.medicine_and_dressing_materials=Orvosi ellátás és kötszerek
+examination.invoice.group.reimbursement_of_travel_expenses=Utazási költségtérítés
 
 index.placeholder.search=Keresés...
 
