Fix some bugs and finished the add examination function

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ button.edit=Edit
 button.login=Login
 button.save=Save
 button.cancel=Cancel
+button.browse=Browse
 
 animal.label.patient=Patient
 animal.label.name=Name
@@ -13,6 +14,7 @@ animal.label.species=Species
 animal.label.breed=Breed
 animal.label.sex=Sex
 animal.label.age=Age
+animal.add.animal_list_is_empty=The given patient doesn't have an animal. It must be selected before choosing one.
 
 examination.panel.header.animal=Animal data
 examination.panel.header.patient=Patient data
@@ -50,3 +52,14 @@ patient.label.city=City
 patient.label.address=Address
 patient.label.phone=Phone
 patient.label.email=Email address
+patient.add.patient_list_is_empty=No patient found in the database. Please add a new item before creating a new invoice or animal.
+
+validator.newExamination.patientIdError=Patient field is mandatory
+validator.newExamination.animalIdError=Animal field is mandatory
+validator.newExamination.invoiceIdError=Invoice number can not be zero
+validator.patient.nameError=Name field is mandatory
+validator.patient.cityError=City field is mandatory
+validator.patient.addressError=Address field is mandatory
+validator.animal.nameError=Name field is mandatory
+validator.animal.speciesError=Species field is mandatory
+validator.animal.breedError=Breed field is mandatory
