--- a/src/main/resources/messages_hu.properties
+++ b/src/main/resources/messages_hu.properties
@@ -6,6 +6,7 @@ button.edit=Szerkesztés
 button.login=Bejelentkezés
 button.save=Mentés
 button.cancel=Mégsem
+button.browse=Tallózás
 
 animal.label.patient=Páciens
 animal.label.name=Név
@@ -13,6 +14,7 @@ animal.label.species=Faj
 animal.label.breed=Fajta
 animal.label.sex=Nem
 animal.label.age=Kor
+animal.add.animal_list_is_empty=Adott pácienshez még nem tartozik állat. Kiválasztás el?tt fel kell, hogy vegyen egyet.
 
 examination.panel.header.animal=Állat adatai
 examination.panel.header.patient=Páciens adatai
@@ -50,3 +52,14 @@ patient.label.city=Város
 patient.label.address=Cím
 patient.label.phone=Telefon
 patient.label.email=Email cím
+patient.add.patient_list_is_empty=Nincs páciens az adatbázisba. Miel?tt állatot, vagy számlát szeretne létrehozni el?bb fel kell vegyen egy új elemet.
+
+validator.newExamination.patientIdError=Páciens megadása kötelez?
+validator.newExamination.animalIdError=Állat megadása kötelez?
+validator.newExamination.invoiceIdError=A számlaszám nem lehet nulla
+validator.patient.nameError=Név megadása kötelez?
+validator.patient.cityError=Város megadása kötelez?
+validator.patient.addressError=Cím megadása kötelez?
+validator.animal.nameError=Név megadása kötelez?
+validator.animal.speciesError=Faj megadása kötelez?
+validator.animal.breedError=Fajta megadása kötelez?
